github environment doesnt recognize data.getFirst(). Using .get(0) instead